2003-12-23  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c (struct _GtkFileSystemGnomeVFS): Changed
	the icon_theme to be a GtkIconTheme rather than a GnomeIconTheme.
	Added a screen field.
	(gtk_file_system_gnome_vfs_init): Initialize the screen field.
	(ensure_icon_theme): New function, ensures that the icon theme has
	a screen set.
	(gtk_file_system_gnome_vfs_volume_render_icon): Call ensure_icon_theme().
	(gtk_file_system_gnome_vfs_render_icon): Likewise.
	(get_icon_from_name): Use gtk_icon_theme_lookup_icon().

2003-12-22  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c: Add Novell copyright.
	(struct _GtkFileSystemGnomeVFS): Added a field for a GnomeVFSVolumeMonitor.
	(gtk_file_system_gnome_vfs_init): Create a volume monitor and
	connect to its signals.
	(gtk_file_system_gnome_vfs_finalize): Unref the volume monitor.
	(volume_mount_unmount_cb): New callback.
	(drive_connect_disconnect_cb): New callback.
	(gtk_file_system_gnome_vfs_list_volumes): Implement.
	(gtk_file_system_gnome_vfs_volume_free): Implement.
	(gtk_file_system_gnome_vfs_volume_get_base_path): Implement.
	(gtk_file_system_gnome_vfs_volume_get_is_mounted): Implement.
	(gtk_file_system_gnome_vfs_volume_mount): Implement.
	(gtk_file_system_gnome_vfs_volume_get_display_name): Implement.
	(get_icon_from_name): New function, code from gtk_file_system_unix_render_icon().
	(gtk_file_system_gnome_vfs_volume_render_icon): Implement.
	(gtk_file_system_gnome_vfs_render_icon): Use get_icon_from_name().
	(get_icon_from_name): Oops, handle the case where the icon file
	could not be loaded.

2003-12-10  Federico Mena Quintero  <federico@ximian.com>

	* testfilechooser.c (main): Dramatically improved the usability of
	the extra widget through careful word choice.

2003-11-18  Federico Mena Quintero  <federico@ximian.com>

	* configure.ac: Added a libgnomeui dependency.

	* gtkfilesystemgnomevfs.c (struct _GtkFileSystemGnomeVFS): Added a